--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "blog",
   "version": "0.0.1",
+  "dependencies": {
+    "coffee-script" : "1.3.x",
+    "less" : "1.3.x"
+  },
   "engines": {
     "node": "0.6.x"
   }
